// This file includes shared types for the surf protobuf data types

syntax = "proto3";

package surf;

// import "google/protobuf/timestamp.proto";

option csharp_namespace = "Surf.Proto";

message MemberAddress {
    oneof ipAddr {
        fixed32 v4 = 1;
        bytes v6 = 2;
    }
    fixed32 port = 3; 
}

message Gossip {
    oneof messageType {
        FailedToPingMember failedToPingMember = 1;
        MemberJoined memberJoined = 2;
    }
}

/* Messages that transport information */

message FailedToPingMember { // failed to ping member
    MemberAddress member = 1 ;
}

message MemberJoined {
    MemberAddress member=1;
}